--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
       <artifactId>gson</artifactId>
       <version>2.8.9</version>
     </dependency>
+
+    <dependency>
+      <groupId>javax.websocket</groupId>
+      <artifactId>javax.websocket-api</artifactId>
+      <version>1.1</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>QuizApp</finalName>
