Created Logging aspect. Changes to files for AspectJ

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,18 @@
     </dependency>
 
     <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjrt</artifactId>
+      <version>1.9.20.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.9.20.1</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>42.7.4</version>
@@ -52,18 +64,75 @@
       <version>10.1.5</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.36</version> <!-- Use the latest version -->
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.6</version> <!-- Use the latest version -->
+    </dependency>
+
+
   </dependencies>
+  <properties>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+  </properties>
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <includes>
+          <include>**/*.xml</include>
+          <include>**/*.properties</include>
+        </includes>
+      </resource>
+    </resources>
     <finalName>QuizApp</finalName>
       <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>3.1.2</version>
+          <executions>
+            <execution>
+              <id>list</id>
+              <goals>
+                <goal>list</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
               <configuration>
-                  <source>8</source>
-                  <target>8</target>
+                  <source>17</source>
+                  <target>17</target>
               </configuration>
           </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>aspectj-maven-plugin</artifactId>
+          <version>1.10</version>
+          <configuration>
+            <complianceLevel>17</complianceLevel>
+            <source>17</source>
+            <target>17</target>
+            <showWeaveInfo>true</showWeaveInfo>
+            <aspectLibraries>
+              <aspectLibrary>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+              </aspectLibrary>
+            </aspectLibraries>
+          </configuration>
+        </plugin>
+
       </plugins>
   </build>
 </project>
