--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
       <version>10.1.5</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.auth0</groupId>
+      <artifactId>java-jwt</artifactId>
+      <version>4.2.0</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>QuizApp</finalName>
