--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
             
       # Runs a single command using the runners shell
       - name: Build with Maven
-        run: mvn clean install -f comp3940-assignment-1/pom.xml
+        run: mvn clean install -f pom.xml
         
       - name: Archive build artifacts
         if: success()
