--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,10 @@ on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "dev" ]
+    
+  pull_request:
+    branches:
+      - dev  # Only run on pull requests targeting the dev branch
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
